// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> matches snapshot 1`] = `
<div>
  <fieldset
    class="css-amgjt9-container-container"
    id="testRadioGroup"
  >
    <div
      class="css-ud70d6-radioButtonContainer-radioButtonContainer"
    >
      <input
        id="Test groupname-testOptionValue"
        name="Test groupname"
        type="radio"
        value="testOptionValue"
      />
      <label
        for="Test groupname-testOptionValue"
      >
        Test option label
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<RadioGroup /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <fieldset
    class="css-jgs0pf-container-container"
    id="testRadioGroup"
  >
    <div
      class="css-ud70d6-radioButtonContainer-radioButtonContainer"
    >
      <input
        id="Test groupname-testOptionValue"
        name="Test groupname"
        type="radio"
        value="testOptionValue"
      />
      <label
        for="Test groupname-testOptionValue"
      >
        Test option label
      </label>
    </div>
  </fieldset>
</div>
`;
